fixed break in anchor link

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -5,3 +5,7 @@
 .footer-title {
     opacity:inherit;
 }
+
+a {
+    word-wrap: break-word;
+}
